--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/core": "^10.4.4",
     "@nestjs/platform-express": "^10.4.4",
     "@nestjs/config": "^3.1.1",
+    "@nestjs/schedule": "^4.0.0",
+    "@nestjs/axios": "^3.0.1",
     "@supabase/supabase-js": "^2.39.3",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
